<resources>
    <string name="app_name">Barcode scanner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Search">Search</string>

    <string name="Cancel">Cancel</string>
    <string name="Save">Save</string>
    <string name="Continue">Continue</string>
    <string name="ADD">ADD</string>
    <string name="ProductName">Product Name</string>
    <string name="Description">Description</string>
    <string name="ProductType">Product Type</string>
    <string name="ExpirationDate">Expiration Date</string>
    <string name="ProductionDate">Production Date</string>
    <string name="Barcode">Barcode</string>
    <string name="Addproduct">ADD Product</string>
    <string name="SelectTypeOfProduct">Select Type Of Product :</string>
    <string name="Pt1">Cleaners</string>
    <string name="Pt2">Canned</string>
    <string name="Pt3">Freezers</string>
    <string name="Pt4">Chips</string>
    <string name="Pt5">Chocolate</string>
    <string name="Pt6">Coal</string>
    <string name="Pt7">Soft Drink</string>
    <string name="Pt8">Household Items</string>
    <string name="Pt9">Legumes</string>
    <string name="Pt10">Milk</string>
    <string name="Pt11">Homs</string>
    <string name="Pt12">Salad</string>
    <string name="Pt13">Diapers</string>
    <string name="Pt14">Oils</string>
    <string name="Pt15">coffee</string>
    <string name="Pt16">Tea</string>
    <string name="Pt17">Spices</string>
    <string name="Pt18">Nescafe</string>
    <string name="Pt19">cheese</string>
    <string name="Pt20">Herbs</string>
    <string name="Pt21">Stationery</string>
    <string name="Pt22">Ketchup</string>
    <string name="Pt23">Mayonnaise</string>
    <string name="Pt24">Tahini</string>
    <string name="Username">User Name</string>
    <string name="Password">Password</string>
    <string name="forgetpasswoed">FORGET PASSWORD ?</string>
    <string name="newuser">New User?</string>
    <string name="SignUp">Sign Up</string>
    <string name="Signintocontinue">Sign In To Continue</string>
    <string name="signin">S I G N I N</string>
    <string name="inventory">Inventory</string>
    <string name="home">Home</string>
    <string name="Scanner">Scanner</string>
    <string name="Add">Add</string>
    <string name="Price">Price</string>
    <string name="voiceSearch">Voice Search</string>
    <string-array name="pt">
        <item>@string/Pt1</item>
        <item>@string/Pt2</item>
        <item>@string/Pt3</item>
        <item>@string/Pt4</item>
        <item>@string/Pt5</item>
        <item>@string/Pt6</item>
        <item>@string/Pt7</item>
        <item>@string/Pt8</item>
        <item>@string/Pt9</item>
        <item>@string/Pt10</item>
        <item>@string/Pt11</item>
        <item>@string/Pt12</item>
        <item>@string/Pt13</item>
        <item>@string/Pt14</item>
        <item>@string/Pt15</item>
        <item>@string/Pt16</item>
        <item>@string/Pt17</item>
        <item>@string/Pt18</item>
        <item>@string/Pt19</item>
        <item>@string/Pt20</item>
        <item>@string/Pt21</item>
        <item>@string/Pt22</item>
        <item>@string/Pt23</item>
        <item>@string/Pt24</item>


    </string-array>
    <string name="thisfieldcantbeempty">this field cant be empty!</string>
    <string name="Required">Required</string>
    <string name="Statistics">Statistics</string>
    <string name="Dates">Dates</string>
    <string name="lessthen6">The password can\'t be less than 6 characters</string>
    <string name="passerror">password is not true</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="dateofbirth">Date of Birth</string>
    <string name="CreateNewAccount">Create New Account</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="imnotarobot">i\'m not a robot</string>
    <string name="welcome">enjoy your time 😍</string>
    <string name="textalert">Welcome Backe Again</string>
    <string name="Profile">Profile</string>
    <string name="MainMenus">Main Menus</string>
    <string name="Adminpage">Admin Page</string>
    <string name="Inbox">Inbox</string>
    <string name="version_unknown">v-1.0.0</string>
    <string name="Settings">Settings</string>
    <string name="Resetpassword">Reset password</string>
    <string name="EnterYourEmail">Enter Your Email</string>
    <string name="Invalidemailformat">Invalid email format</string>
    <string name="noemail">If the email doesn\'t appear, check it in the spam list.</string>
    <string name="Checkyouremail">Check your email to reset your password</string>
    <string name="Users">Users</string>
    <string name="webdeve">Web Development</string>
    <string name="skills">SKILLS</string>
    <string name="bio">BIO</string>
    <string name="ADDBIO">ADD BIO</string>
</resources>
