<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="450dp"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center"
   >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SelectTypeOfProduct"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lay_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/voiceSearch"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/mic"
        app:helperTextTextColor="@color/red_50"

        android:layout_marginTop="10dp"
        app:endIconDrawable="@drawable/mic"
        >
        <AutoCompleteTextView

            android:id="@+id/searchautotextview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:inputType="text"
            />


    </com.google.android.material.textfield.TextInputLayout>
    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="270dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RadioGroup
                android:id="@+id/radioGroup"

                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/radio_button_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Pt1"
                    android:textSize="18sp"/>
                <RadioButton
                    android:id="@+id/radio_button_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Pt2"
                    android:textSize="18sp"/>
                <RadioButton
                    android:id="@+id/radio_button_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Pt3"
                    android:textSize="18sp"/>
                <RadioButton
                    android:id="@+id/radio_button_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Pt4"
                    android:textSize="18sp"/>
                <RadioButton
                    android:id="@+id/radio_button_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Pt5"
                    android:textSize="18sp"/>
                <RadioButton
                    android:id="@+id/radio_button_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Pt6"
                    android:textSize="18sp"/>
                <RadioButton
                    android:id="@+id/radio_button_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Pt7"
                    android:textSize="18sp"/>
                <RadioButton
                    android:id="@+id/radio_button_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Pt8"
                    android:textSize="18sp"/>
                <RadioButton
                    android:id="@+id/radio_button_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Pt9"
                    android:textSize="18sp"/>
                <RadioButton
                    android:id="@+id/radio_button_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Pt10"
                    android:textSize="18sp"/>
                <RadioButton
                    android:id="@+id/radio_button_11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Pt11"
                    android:textSize="18sp"/>
                <RadioButton
                    android:id="@+id/radio_button_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Pt12"
                    android:textSize="18sp"/>
                <RadioButton
                    android:id="@+id/radio_button_13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Pt13"
                    android:textSize="18sp"/>
                <RadioButton
                    android:id="@+id/radio_button_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Pt14"
                    android:textSize="18sp"/>
                <RadioButton
                    android:id="@+id/radio_button_15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Pt15"
                    android:textSize="18sp"/>
                <RadioButton
                    android:id="@+id/radio_button_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Pt16"
                    android:textSize="18sp"/>
                <RadioButton
                    android:id="@+id/radio_button_17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Pt17"
                    android:textSize="18sp"/>
                <RadioButton
                    android:id="@+id/radio_button_18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Pt18"
                    android:textSize="18sp"/>
                <RadioButton
                    android:id="@+id/radio_button_19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Pt19"
                    android:textSize="18sp"/>
                <RadioButton
                    android:id="@+id/radio_button_20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Pt20"
                    android:textSize="18sp"/>
                <RadioButton
                    android:id="@+id/radio_button_21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Pt21"
                    android:textSize="18sp"/>
                <RadioButton
                android:id="@+id/radio_button_22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pt22"
                    android:textSize="18sp"/>
                <RadioButton
                    android:id="@+id/radio_button_23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Pt23"
                    android:textSize="18sp"/>
                <RadioButton
                    android:id="@+id/radio_button_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Pt24"
                    android:textSize="18sp"
                  />

            </RadioGroup>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <Button
            android:id="@+id/Cancelbtn"

            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/Cancel"
            android:textStyle="bold"
            android:textSize="17sp"/>
        <Button
            android:id="@+id/savebtn"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/Save"
            android:textStyle="bold"
            android:textSize="18sp"/>
    </LinearLayout>

</LinearLayout>

</LinearLayout>