<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="380dp"
    android:layout_height="525dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="20dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    android:layout_gravity="center"
    android:padding="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        app:lottie_rawRes="@raw/resetpassword"
        app:lottie_autoPlay="true"

        android:visibility="visible"
        android:layout_gravity="center"
        android:translationZ="9dp"

        app:lottie_loop="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Checkyouremail"
            android:layout_margin="4dp"
            android:gravity="center"
            android:textSize="20sp"/>
<TextView

android:gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/noemail"
    android:layout_margin="4dp"
    android:textColor="@color/red_500"
    android:textSize="16sp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded_green"
            style="@style/Widget.AppCompat.Button.Borderless"

            android:text="@string/Continue"
            android:textColor="@android:color/white"
            />

    </LinearLayout>
    </androidx.cardview.widget.CardView>

