<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<FrameLayout
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:translationZ="9dp">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:lottie_rawRes="@raw/animationbackground"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:scaleType="fitXY"
        />

</FrameLayout>

    <com.gauravk.bubblenavigation.BubbleNavigationLinearView
        android:id="@+id/bottom_navigation_view_linear"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="642dp"
        android:background="@drawable/bottombarcolor"
        android:elevation="8dp"
        android:layoutDirection="ltr"
        android:orientation="horizontal"

        android:padding="12dp"
        android:translationZ="12dp">

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/l_item_home2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            app:bt_active="true"
            app:bt_colorActive="@color/green_active"
            app:bt_colorInactive="@color/green_inactive"
            app:bt_icon="@drawable/ic_home"
            app:bt_shape="@drawable/transition_background_drawable_home"
            app:bt_title="@string/home"

            />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/l_item_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_active="true"
            app:bt_colorActive="@color/green_active"
            app:bt_colorInactive="@color/green_inactive"
            app:bt_icon="@drawable/ic_qr_code_scanner"
            app:bt_shape="@drawable/transition_background_drawable_home"

            app:bt_title="@string/Scanner" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/inventory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_active="true"
            app:bt_colorActive="@color/green_active"
            app:bt_colorInactive="@color/green_inactive"
            app:bt_icon="@drawable/inventory"
            app:bt_shape="@drawable/transition_background_drawable_home"
            app:bt_title="@string/inventory"
            app:bt_titlePadding="2dp" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/view_offset_helper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            app:bt_active="true"
            app:bt_colorActive="@color/green_active"
            app:bt_colorInactive="@color/green_inactive"
            app:bt_icon="@drawable/ic_add_circle"
            app:bt_shape="@drawable/transition_background_drawable_home"
            app:bt_title="@string/Add"
            app:bt_titlePadding="2dp" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:bt_active="true"
            app:bt_colorActive="@color/green_active"
            app:bt_colorInactive="@color/green_inactive"
            app:bt_icon="@drawable/ic_menu"
            app:bt_shape="@drawable/transition_background_drawable_home"
            app:bt_title="@string/Profile" />
        <!-- Add more child items here - max upto 5 -->
    </com.gauravk.bubblenavigation.BubbleNavigationLinearView>


</RelativeLayout>