<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.Add">
    <!--**************LottieAnimationView***********************-->

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:lottie_rawRes="@raw/animationbackground"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:scaleType="fitXY"
        />


    <!--***************** Card View***********************-->

<androidx.cardview.widget.CardView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
   android:layout_gravity="center"
    android:layout_marginBottom="40dp"
    android:layout_marginStart="40dp"
    android:layout_marginEnd="40dp"
    app:cardCornerRadius="40dp"
    >

    <LinearLayout
        android:layout_width="300dp"
        android:orientation="vertical"
        android:layout_height="590dp"
        android:background="@color/white"
       android:gravity="center"
        android:layout_gravity="center"
        android:layout_margin="40dp"

        >
        <!--**************ADD Product text view***********************-->
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Addproduct"
            android:textColor="@color/gray"
            android:textSize="34sp"
            android:textStyle="bold"
            />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/product_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_launcher_background"
                app:civ_border_width="0.5dp"

                />
        <!--************** Product Name Edit Text***********************-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/ProductName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/aaicon"
            app:helperText=""
            app:helperTextTextColor="@color/RED"
            app:endIconMode="clear_text"
            android:layout_marginTop="10dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:inputType="text"

                />
        </com.google.android.material.textfield.TextInputLayout>
        <!--************** Product Description Edit Text***********************-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/Description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/descriptionicon"
            app:helperText=""
            app:helperTextTextColor="@color/RED"

            app:endIconMode="clear_text"
            android:layout_marginTop="10dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <!--************** Product Type Edit Text***********************-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/type_lay"
        android:layout_width="175dp"
        android:layout_height="match_parent"
        android:hint="@string/ProductType"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/product"
        app:helperText=""
        app:helperTextTextColor="@color/RED"

        app:endIconMode="dropdown_menu"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        >


        <AutoCompleteTextView

            android:id="@+id/filled_exposed_dropdown"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>
    <!--************** Product Price Edit Text***********************-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Pricelay"
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:hint="@string/Price"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/shekel"
        app:helperText=""
        app:helperTextTextColor="@color/RED"


        android:layout_marginTop="10dp"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_Price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:inputType="number"

            />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>


        <!--************** Production Date Edit Text***********************-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lay_Production_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/ProductionDate"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/calendar_icon"
            app:helperText=""
            app:helperTextTextColor="@color/RED"

            android:layout_marginTop="10dp"
            >

            <AutoCompleteTextView
                android:id="@+id/ed_Production_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <!--************** Expiration Date Edit Text***********************-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lay_Expiration_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/ExpirationDate"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/expired"
            app:helperText=""
            app:helperTextTextColor="@color/RED"

            android:layout_marginTop="10dp"
            >

            <AutoCompleteTextView
                android:id="@+id/ed_Expiration_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:inputType="none"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <!--************** Barcode Edit Text***********************-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lay_Barcode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/Barcode"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/qr_code_scanner"
            app:helperText=""
            app:helperTextTextColor="@color/RED"

            app:endIconMode="clear_text"
            android:layout_marginTop="10dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_barcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:inputType="numberDecimal"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <!--************** ADD Product Button ***********************-->
            <Button
                android:id="@+id/addbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ADD"
                android:translationZ="4dp"
                android:layout_marginTop="20dp"
                />
        </LinearLayout>
    </ScrollView>

    </LinearLayout>
</androidx.cardview.widget.CardView>

</FrameLayout>