<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/forgetbg"
    tools:context=".ForgetPassword"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
android:gravity="center"
        >
    <ImageView
        android:id="@+id/lockpng"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:src="@drawable/ic_forget"
        android:translationZ="20dp"

      />





            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EnterYourEmail"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginTop="20dp"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="20dp"
                android:id="@+id/forgetemaillay"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/GREEN"
                app:endIconMode="clear_text"
                app:helperText=""
                app:helperTextTextColor="@color/red_500"
                app:hintTextColor="@color/green_300"
                app:startIconDrawable="@drawable/ic_email"
                app:errorTextColor="@color/red_500">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_marginTop="20dp"

                    android:id="@+id/forgetemailed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="18sp"

                    />
            </com.google.android.material.textfield.TextInputLayout>
        <Button

            android:id="@+id/btn_restPass"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginLeft="-4dp"
            android:layout_marginRight="-4dp"
            android:background="@drawable/btn_rounded_green_300"
            android:elevation="20dp"
            android:shadowColor="#1FC356"
            android:layout_marginTop="40dp"
            android:text="@string/Resetpassword"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="20sp"/>

    </LinearLayout>



</FrameLayout>